--- a/Makefile.am
+++ b/Makefile.am
@@ -3,31 +3,24 @@ ACLOCAL_AMFLAGS = -I m4
 
 commoncppflags = -std=c++11 -O2 -I/usr/local/include -Ithird_party
 
-nodist_wpn_SOURCES =
-BUILT_SOURCES = $(gengrpcs)
-CLEANFILES = $(gengrpcs)
-
 #
-#	Binaries
+#	Libraries
 #
-bin_PROGRAMS = wpn-lnotify
+lib_LTLIBRARIES = libwpn-lnotify.la
 
 nobase_dist_include_HEADERS = \
-	wpn-lnotify-config.h  wpn-lnotify.h \
-	$(gengrpcs_h)
+	wpn-lnotify.h
 common_src = 
-
 commonlibs = -L/usr/local/lib/ -largtable2 -lnotify
 
 #
-#	wpn
+#	libwpn-lnotify.la
 #
-wpn_lnotify_SOURCES= \
-	wpn-lnotify-config.cpp wpn-lnotify.cpp \
+libwpn_lnotify_la_SOURCES = \
+	wpn-lnotify.cpp \
 	$(common_src)
-
-wpn_lnotify_LDADD = $(commonlibs)
-wpn_lnotify_CPPFLAGS = $(commoncppflags)
+libwpn_lnotify_la_CPPFLAGS = $(commoncppflags)
+libwpn_lnotify_la_LIBADD = $(commonlibs)
 
 #
 #	Configs, readme, CMake etc.
