--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,7 @@
 SUBDIRS = .
 ACLOCAL_AMFLAGS = -I m4
 
-commoncppflags = -std=c++11 -O2 -I/usr/local/include -Ithird_party
+commoncppflags = -std=c++11 -O2 -I/usr/local/include -Ithird_party -I/usr/include/glib-2.0 -I/usr/lib/x86_64-linux-gnu/glib-2.0/include/ -I/usr/include/gdk-pixbuf-2.0
 
 #
 #	Libraries
@@ -11,7 +11,7 @@ lib_LTLIBRARIES = libwpn-lnotify.la
 nobase_dist_include_HEADERS = \
 	wpn-lnotify.h
 common_src = 
-commonlibs = -L/usr/local/lib/ -largtable2 -lnotify
+commonlibs = -L/usr/local/lib/ -lnotify
 
 #
 #	libwpn-lnotify.la
@@ -29,3 +29,22 @@ configdir = $(datadir)
 dist_config_DATA = \
 	$(proto) \
 	COPYING  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY  README.md autogen.sh .kdev_include_paths
+
+#
+#	Binaries
+#
+bin_PROGRAMS = wpn-lnotify
+
+
+#
+#	wpn-lnotify
+#
+wpn_lnotify_SOURCES= \
+	test/main.cpp \
+	$(common_src)
+
+wpn_lnotify_LDADD = $(commonlibs) -lwpn-lnotify
+wpn_lnotify_CPPFLAGS = $(commoncppflags)
+
+
+
